--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 once_cell = "1.21.3"
 rand = "0.9.1"
 sqlite-loadable = "0.0.5"
+uuid = {version="1.16.0", features=["v4"]}
 
 [lib]
 crate-type = ["cdylib"]
